    and relies on the .pc directory to know whether patches are applied
    or not. Closes: #557667
  * Add new dpkg-source option --single-debian-patch supported by the source
    format "3.0 (quilt)" so that it behaves more like 1.0 and its single diff
    that is constantly updated with all upstream changes. Useful if the
    workflow is VCS based and can't generate a full patch set.

 -- Raphael Hertzog <hertzog@debian.org>  Sun, 29 Nov 2009 18:15:16 +0100

dpkg (1.15.5.3) unstable; urgency=low

  [ Raphael Hertzog ]
  * Avoid usage of IO::String in dpkg-scanpackages, rely on Dpkg::IPC
    instead to directly get a pipe file descriptor. Closes: #557013
  * Put "3.0 (quilt)" in the default list of formats tried by dpkg-source
    after "1.0" and before "3.0 (native)".
  * Let dpkg-source fail if several upstream orig.tar files are available
    (using different compression scheme) since we don't know which one
    to use.
  * Add missing "use Dpkg::Gettext" in Dpkg::Changelog::Entry::Debian.
    Closes: #557668
  * When building "3.0 (quilt)" source packages, use QUILT_PATCH_OPTS="-t -F 0
    -N -u -V never -g0" so that quilt is as strict as dpkg-source's internal
    implementation of quilt. Closes: #557664, #558233
  * Before accepting to build a 3.0 (quilt) source packages, ensure that
    debian/patches is a directory (or non-existing) and that
    debian/patches/series is a file (or non-existing). Closes: #557618
  * Dpkg::IPC::fork_and_exec() now includes the changed environment
    variables in the default error message displayed when the sub-process
    fails.

  [ Guillem Jover ]
  * Verify that the alternative used in update-alternatives --set has been
    registered instead of failing with an undefined value in the slave
    method. Closes: #554136
  * Strip leading spaces in the first line of a field's value in
    Dpkg::Control::Hash. Closes: #557547

 -- Guillem Jover <guillem@debian.org>  Fri, 27 Nov 2009 19:23:36 +0100
