@@ -11,6 +11,8 @@ dpkg (1.15.5.4) UNRELEASED; urgency=low
     format "3.0 (quilt)" so that it behaves more like 1.0 and its single diff
     that is constantly updated with all upstream changes. Useful if the
     workflow is VCS based and can't generate a full patch set.
+  * dpkg-source now uses debian/source/patch-header as header of the automatic
+    Debian patch in format "3.0 (quilt)".
 
  -- Raphael Hertzog <hertzog@debian.org>  Sun, 29 Nov 2009 18:15:16 +0100
 
